fix: change footer item sizes on mobile

--- a/styles/base.css
+++ b/styles/base.css
@@ -293,15 +293,6 @@ ul#menu {
     height: 40px;
 }
 
-/* #subscribe input[type=submit] {
-    height: 46px;
-    font-size: 1.5em;
-    font-family: "Oswald", sans-serif;
-    background-color: #242323;
-    border: 2px solid #fff;
-    color: #fff;
-} */
-
 #social-icons {
   display: flex;
   margin-top: 40px;
@@ -318,6 +309,18 @@ ul#menu {
 #copyright p {
     font-size: 15px;
     padding-bottom: 30px;
+}
+
+@media screen and (max-width: 480px) {
+    #footer-wrapper {
+        padding: 20% 10%;
+    }
+
+    #social-icons {
+        width: 200px;
+        gap: 41px;
+        justify-content: start;
+    }
 }
 
 @media screen and (min-width: 800px) {
